# squabble

./: .gitignore  pyproject.toml  setup.py
squabble/: lint.py  util.py
squabble/rules/: disallow_float_types.py  require_columns.py  require_foreign_key.py
tests/: test_disallow_float_types.py  test_lint.py  test_require_columns.py  test_require_foreign_key.py  test_util.py
