[tool.poetry]
name = "squabble"
version = "0.1.0"
description = ""
authors = ["Marcos <marcos@tiqets.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
pglast = "5"
docopt = "^0.6.2"
colorama = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
pytest-runner = "^5.3"
